# OpenCobolIDE

./: .gitignore  pyproject.toml  requirements.txt
open_cobol_ide/: system.py
