[tool.poetry]
name = "opencobolide"
version = "0.1.0"
description = "A simple COBOL IDE"
authors = ["None"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.4"
pygments = "^2.17.2"
pyqode-core = "^4.0.11"
pyqode-cobol = "^2.11.0"
pyqode-qt = "^2.10.0"
qcrash = "^0.2.0"
qdarkstyle = "^3.2.3"
githubpy = "^2.0.0"
keyring = "^24.3.0"
pyqode-uic = "^0.1.1"
pyqt-distutils = "^0.7.3"
distro = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
